# QComputations

./: .gitignore  4 - JCH Hamiltonian for two cavities.ipynb  5 - Quantum master equation with in-flow and out-flow (1).ipynb  CMakeLists.txt  LICENSE.md  README.md  a.out  clean_install.sh  copy_to_lomonosov.sh  documentation.aux  documentation.fdb_latexmk  documentation.fls  documentation.toc  from_lomonosov.sh  gdb-cmds.txt  install.sh  install_cpu_cluster.sh  install_cpu_cluster_no_plots.sh  install_headers.sh  install_mpi.sh  install_mpi_cluster.sh  install_single.sh  install_single_no_plots.sh  link_advisor.txt  main.cpp  makefile  makefile.old  nonblock  nonblock.cpp  prog  seaborn_config.json  setvars.sh  test.cpp  test.py  to_lomonosov.sh  update_plot_script.sh
.ipynb_checkpoints/: 4 - JCH Hamiltonian for two cavities-checkpoint.ipynb  5 - Quantum master equation with in-flow and out-flow (1)-checkpoint.ipynb
_minted-documentation/: 06061B365E91AE09EA72F6093C6D4BF28151FFF4F73FF688D613FF72DAA9D9A5.pygtex  07C57F6FAABB476FB208AB7C91C2C9E98151FFF4F73FF688D613FF72DAA9D9A5.pygtex  182FD685C8DA97ED3C7347EB07B481468151FFF4F73FF688D613FF72DAA9D9A5.pygtex  203276795CB39D1A6D9A673B10282E5B8151FFF4F73FF688D613FF72DAA9D9A5.pygtex  22C78ACC2EF9B57426611DEC5F37E6868151FFF4F73FF688D613FF72DAA9D9A5.pygtex  30E85B5998FCB2939291D0CEDE39BCCC8151FFF4F73FF688D613FF72DAA9D9A5.pygtex  3BD002980214AF3F70284D3D95009E678151FFF4F73FF688D613FF72DAA9D9A5.pygtex  5EF2498ED05A75266160B68E1ED1D1A28151FFF4F73FF688D613FF72DAA9D9A5.pygtex  60624FC0841CFAAF1555B6FEF4BD65748151FFF4F73FF688D613FF72DAA9D9A5.pygtex  6226C150174B79E24FFF1E24A1EE44F58151FFF4F73FF688D613FF72DAA9D9A5.pygtex  6360D61EFF36BCF8B1070E1CE4C0E3A88151FFF4F73FF688D613FF72DAA9D9A5.pygtex  7F1DA9E938F43F0F84CF2A01F2F6329F8151FFF4F73FF688D613FF72DAA9D9A5.pygtex  91B4C6D9DE216FE368E121D6E4E4FD288151FFF4F73FF688D613FF72DAA9D9A5.pygtex  9F7F77C597E355C741E2B8F709F60D118151FFF4F73FF688D613FF72DAA9D9A5.pygtex  A29E5DC3A431690B56BC1E3BE0F63DB18151FFF4F73FF688D613FF72DAA9D9A5.pygtex  AB8A83EDFDC30C6374C798CE9E69B9938151FFF4F73FF688D613FF72DAA9D9A5.pygtex  B2683AF89E0F9B217138AE141A78DF518151FFF4F73FF688D613FF72DAA9D9A5.pygtex  B84AB02FC256131D0BECA9B85C2C519B8151FFF4F73FF688D613FF72DAA9D9A5.pygtex  BEEB15CBE5743F2237A25166E14F37D78151FFF4F73FF688D613FF72DAA9D9A5.pygtex  DCA0176770D5536D2E77F7F3B80727328151FFF4F73FF688D613FF72DAA9D9A5.pygtex  E4F7F065DFB6FF67CACADE05EEAC9F848151FFF4F73FF688D613FF72DAA9D9A5.pygtex  ED685939F9C56CE447496F12E19F64E38151FFF4F73FF688D613FF72DAA9D9A5.pygtex  F58D3B8F309C00AD25899A83D0520C1D8151FFF4F73FF688D613FF72DAA9D9A5.pygtex  F7B9DB46E74B1402154EB6D5597FAB4A8151FFF4F73FF688D613FF72DAA9D9A5.pygtex  FD398C96278ED9E8C3BF16E5C7BC9B578151FFF4F73FF688D613FF72DAA9D9A5.pygtex
cpu_cluster/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.old  Makefile  cmake_install.cmake  makefile
cpu_cluster_no_plots/: makefile
doc/: documentation.aux  documentation.fdb_latexmk  documentation.fls  documentation.tex  documentation.toc  instruction.aux  instruction.fdb_latexmk  instruction.fls  instruction.tex  instruction.toc
examples/: DAT.cpp  a.out  accurate_realization_tc_example.cpp  basis_state.cpp  blocked_matrix.cpp  blocked_realization_tc_example.cpp  blocked_realization_tch_example.cpp  blocked_tch_example.cpp  exprtk_test.cpp  general_tch_example.cpp  gif_tc_example.cpp  graph_state.cpp  hamiltonian_blocked_example.cpp  hamiltonian_single_example  hamiltonian_single_example.cpp  leak_first_example.cpp  (+21 more)
single/: CMakeCache.txt  CMakeLists.txt  Makefile  cavity_state.cpp.253r.expand  cavity_state.cpp.255r.into_cfglayout  cavity_state.cpp.256r.jump  cavity_state.cpp.268r.reginfo  cavity_state.cpp.291r.outof_cfglayout  cavity_state.cpp.292r.split1  cavity_state.cpp.295r.mode_sw  cavity_state.cpp.296r.asmcons  cavity_state.cpp.301r.ira  cavity_state.cpp.302r.reload  cavity_state.cpp.309r.pro_and_epilogue  cavity_state.cpp.312r.jump2  cavity_state.cpp.324r.stack  cavity_state.cpp.325r.zero_call_used_regs  cavity_state.cpp.328r.mach  cavity_state.cpp.333r.endbr_and_patchable_area  cavity_state.cpp.335r.nothrow  cavity_state.cpp.336r.dwarf2  cavity_state.cpp.338r.dfinish  cmake_install.cmake  makefile  matrix.cpp.253r.expand  matrix.cpp.254r.vregs  matrix.cpp.255r.into_cfglayout  matrix.cpp.256r.jump  matrix.cpp.268r.reginfo  matrix.cpp.291r.outof_cfglayout  matrix.cpp.292r.split1  matrix.cpp.294r.dfinit  matrix.cpp.295r.mode_sw  matrix.cpp.296r.asmcons  matrix.cpp.301r.ira  matrix.cpp.302r.reload  matrix.cpp.309r.pro_and_epilogue  matrix.cpp.312r.jump2  matrix.cpp.323r.split4  matrix.cpp.324r.stack  (+9 more)
(+223 files in other folders)
